--- a/CSS/stylecontra.css
+++ b/CSS/stylecontra.css
@@ -31,7 +31,10 @@ button {
 /* Estilos para la columna izquierda con la imagen */
 .left-column {
     flex: 1;
-    padding-right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
 }
 
 .left-column img {
@@ -80,3 +83,8 @@ button {
 button:hover {
     background-color: #0056a0;
 }
+.btn {
+ margin: 10px;
+
+}
+
